[package]
name = "cafetiere"
description = "Client / server command and control tool."
keywords = ["ssh", "malware", "sub7"]
version = "0.1.0"
authors = ["Phil J. Laszkowicz <phil@fillip.pro>"]
repository = "https://github.com:siilime/cafetiere"
license = "MIT"
include = [
        "Cargo.toml",
        "src/lib.rs"
]

[dependencies]
